2022-04-27  Karl Rackler  <rackler@apple.com>

        [ macOS wk1 ] Fourteen webgl/2.0.0/conformance tests are a flaky timeout
        https://bugs.webkit.org/show_bug.cgi?id=239835

        Unreviewed test gardening. 

        * platform/mac-wk1/TestExpectations:

2022-04-27  Karl Rackler  <rackler@apple.com>

        [ macOS Debug wk2 ] fast/css/variables/test-suite/168.html is a flaky image failure
        https://bugs.webkit.org/show_bug.cgi?id=239822

        Unreviewed test gardening. 

        * platform/mac-wk2/TestExpectations:

2022-04-27  Eric Carlson  <eric.carlson@apple.com>

        [iOS] unable to start playing audio when device is locked
        https://bugs.webkit.org/show_bug.cgi?id=239812
        <rdar://90642648>

        Reviewed by Jer Noble.

        * media/audio-session-category-expected.txt:
        * media/audio-session-category.html:

2022-04-27  Karl Rackler  <rackler@apple.com>

        [ macOS Debug wk2 ] fast/css/identical-logical-height-decl.html is a flaky image failure
        https://bugs.webkit.org/show_bug.cgi?id=239818

        Unreviewed test gardening. 

        * platform/mac-wk2/TestExpectations:

2022-04-27  Tim Nguyen  <ntim@apple.com>

        Make -webkit-transform-style an alias of transform-style
        https://bugs.webkit.org/show_bug.cgi?id=239808

        Reviewed by Antti Koivisto.

        Fixes cascade issues when applying both -webkit-transform-style and transform-style (see bug 239579), and removes
        unnecessary code as well given the FIXME was never addressed.

        * fast/css/getComputedStyle/computed-style-expected.txt:
        * fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
        * platform/gtk/imported/w3c/web-platform-tests/css/css-cascade/all-prop-initial-xml-expected.txt:
        * platform/gtk/imported/w3c/web-platform-tests/css/cssom/getComputedStyle-detached-subtree-expected.txt: